--- a/Burger House/sass/base/_base.scss
+++ b/Burger House/sass/base/_base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -10,7 +10,7 @@ html{
 }
 
 body{
-    font-family: 'Bebas Neue', cursive;
-    font-weight: 300;
+    font-family: 'Roboto', cursive;
+    font-weight: 400;
     color: $color-brown;
 }
