--- a/Burger House/sass/base/_typography.scss
+++ b/Burger House/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 .text-small{
-    font-weight: 300;
-    font-size: 1.3rem;
-    text-transform: lowercase;
+    font-weight: 600;
+    font-size: 1.4rem;
+ 
 }
