--- a/Burger House/sass/layouts/_header.scss
+++ b/Burger House/sass/layouts/_header.scss
@@ -2,12 +2,13 @@
   background: url("/Assets/headerBG.png") no-repeat center center;
   padding: 20px 35px;
   height: 100vh;
+  width: 100%;
+  position: relative;
 
   &--logoContainer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
   }
 
   .logo {
@@ -17,16 +18,91 @@
     }
 
     &Contact {
-        display: flex;
-        align-items: flex-end;
-        justify-content: center;
+      display: flex;
+      align-items: flex-end;
+      justify-content: center;
     }
   }
 
-  .icon{
-      width: 40px;
-      height: 40px;
-      margin-right: 5px;
-      fill: $color-brown;
+  .icon {
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+    fill: $color-brown;
   }
+}
+
+.headerFood {
+  margin-top: 3%;
+  display: flex;
+  align-items: flex-start;
+  
+}
+
+.headingContainer {
+  margin-right: auto;
+}
+
+
+.foodContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(255,255,255,0.2), url('../../Assets/Glow.png');
+}
+
+// .food__glow {
+//   width: 100%;
+//   height: 100%;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   left: 0;
+//   position: absolute;
+//   z-index: 10;
+//   opacity: 0.8;
+// }
+
+.heading__foods{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: pink;
+}
+
+.foodbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 11;
+  
+}
+
+.food {
+  &__shadow {
+    margin-top: 1rem;
+    width: 50%;
+  }
+
+  &__fries {
+    width: 10%;
+    height: 100%;
+  }
+  &__drinks {
+    width: 200px;
+    height: 100%;
+  }
+  &__burger {
+    width: 500px;
+    height: 100%;
+  }
+}
+
+.priceContainer {
+  position: absolute;
+  background-color: yellow;
+  bottom: 0;
+  left: 0;
 }
